RESOLVED FIXED173277
[iOS] Cmd-C doesn't copy text from WKWebView
https://bugs.webkit.org/show_bug.cgi?id=173277
Summary [iOS] Cmd-C doesn't copy text from WKWebView
Tim Horton
Reported 2017-06-12 14:46:30 PDT
[iOS] Cmd-C doesn't copy text from WKWebView
Attachments
Patch (20.98 KB, patch)
2017-06-12 14:46 PDT, Tim Horton
mitz: review+
Tim Horton
Comment 1 2017-06-12 14:46:58 PDT
Tim Horton
Comment 2 2017-06-12 14:50:31 PDT
mitz
Comment 3 2017-06-12 15:05:52 PDT
Comment on attachment 312699 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=312699&action=review > Source/WebKit2/UIProcess/API/Cocoa/WKWebViewInternal.h:133 > +- (void)_addShortcut:(id)sender; > +- (void)_arrowKey:(id)sender; > +- (void)_define:(id)sender; > +- (void)_lookup:(id)sender; > +- (void)_reanalyze:(id)sender; > +- (void)_share:(id)sender; > +- (void)_showTextStyleOptions:(id)sender; > +- (void)_promptForReplace:(id)sender; > +- (void)_transliterateChinese:(id)sender; > +- (void)replace:(id)sender; Are these necessary? > Source/WebKit2/UIProcess/ios/WKContentViewInteraction.h:343 > + ?
Tim Horton
Comment 4 2017-06-12 15:27:00 PDT
Comment on attachment 312699 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=312699&action=review >> Source/WebKit2/UIProcess/API/Cocoa/WKWebViewInternal.h:133 >> +- (void)replace:(id)sender; > > Are these necessary? I think so? I moved these here from WKContentViewInteraction. They're called from another file (WKContentViewInteraction.mm), and aren't in any header that we can always see. >> Source/WebKit2/UIProcess/ios/WKContentViewInteraction.h:343 >> + > > ? Not a clue.
Tim Horton
Comment 5 2017-06-12 15:28:42 PDT
Matt Lewis
Comment 6 2017-06-12 17:42:40 PDT
I believe this revision https://trac.webkit.org/changeset/218144/webkit caused an api failure on iOS.
Tim Horton
Comment 7 2017-06-12 17:51:37 PDT
The API test doesn’t work? Works for me in the sim. I will investigate tomorrow.
Tim Horton
Comment 8 2017-06-14 10:09:00 PDT
Odd, running the test alone is fine, but running it with all the others causes it to fail.
Tim Horton
Comment 9 2017-06-14 10:14:07 PDT
That seems to not always be true, sometimes it times out alone too.
Tim Horton
Comment 10 2017-06-14 11:06:32 PDT
mitz
Comment 11 2017-08-29 15:52:21 PDT
(In reply to Tim Horton from comment #5) > https://trac.webkit.org/changeset/218144/webkit This caused bug 176077.
Note You need to log in before you can comment on or make changes to this bug.